:white_check_mark: 测试腾讯云 COS

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,11 @@ magic:
       endpoint: oss-cn-hangzhou.aliyuncs.com
       bucket-name: test
       https: true
+    tencent-cos:
+      enabled: true
+      app-id: 125****51
+      access-key: AK****************************at1pg
+      secret-key: npJ****************************nqz
+      bucket-name: test
+      region: ap-shanghai
+      https: true
