:white_check_mark: 测试七牛云存储

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,3 +18,10 @@ magic:
       bucket-name: test
       region: ap-shanghai
       https: true
+    qiniu-cloud:
+      enabled: true
+      access-key: 9Qx*****************9jtENhZ-sTGV**********f5Rd
+      secret-key: 8izWd*****************************Ccgd
+      bucket-name: test
+      endpoint: http://q3**********cho.bkt.clouddn.com
+      region: z0
