--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,3 +25,9 @@ magic:
       bucket-name: test
       endpoint: http://q3**********cho.bkt.clouddn.com
       region: z0
+    min-io:
+      enabled: true
+      access-key: minioadmin
+      secret-key: minioadmin
+      bucket-name: test
+      endpoint: http://192.168.31.8:9000
